--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
     flex-direction: column;
     text-align: center;
     width: 393px;
-    height: 630px;
+    height: fit-content;
     background-color: #4830A1;
     z-index: 1;
     border-radius: 12px;
@@ -104,4 +104,32 @@ body {
     font-weight: 400;
     font-size: 20px;
     color: #271964;
+}
+.img-right {
+    display: block;
+    position: absolute;
+    right: 0px;
+    top: 1800px;
+}
+.price {
+    font-family: var(--font-family);
+    font-weight: 800;
+    font-size: 27px;
+    color: #fff;
+}
+.deluxe-price {
+    padding: 20px;
+}
+.extra-price {
+    padding: 20px;
+}
+.essential-price {
+    padding: 20px;
+}
+.container-simple-text {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+    text-align: start;
+    padding-left: 60px;
 }
