--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     padding: 0px;
     margin: 0px;
     background: linear-gradient(180deg, #010101 0%, #281864 100%);
-    height: 3500px;
+    height: 4000px;
 }
 .body {
     padding: 0px;
@@ -135,6 +135,10 @@ body {
     padding-left: 60px;
 }
 .contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     color: white;
 }
 #contact-form {
@@ -213,3 +217,61 @@ body {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     border-radius: 100%;
 }
+.carousel {
+    position: relative;
+    width: 80%;
+    max-width: 600px;
+    overflow: hidden;
+}
+
+.carousel-inner {
+    display: flex;
+    transition: transform 0.5s ease;
+}
+
+.carousel-item {
+    flex: 1;
+    opacity: 0.5;
+    transform: scale(0.8);
+    transition: transform 0.5s ease, opacity 0.5s ease;
+}
+
+.carousel-item.active {
+    transform: scale(1);
+    opacity: 1;
+}
+
+.carousel-item img {
+    width: 100%;
+    display: block;
+}
+
+.carousel-control {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 2rem;
+    color: #333;
+    text-decoration: none;
+    padding: 0 10px;
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 50%;
+    z-index: 1;
+}
+
+.carousel-control.prev {
+    left: 10px;
+}
+
+.carousel-control.next {
+    right: 10px;
+}
+
+.carousel-control:hover {
+    background-color: rgba(255, 255, 255, 0.9);
+}
+  .container-contact-us {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
