--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     margin: 0px;
     background: linear-gradient(180deg, #010101 0%, #281864 100%);
     height: fit-content;
+    width:100%;
 }
 .body {
     padding: 0px;
